fixed some overflow bugs and text

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -289,6 +289,7 @@ button {
 
 .project-desc {
   width: 100%;
+  line-height: 1.5;
 }
 
 @media (min-width: 700px) {
